tests/cases/compiler-development/artifact/errors/diagnostic-unexpected-character.diagnostic
diagnostic error code=L0001 family=lexer source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-unexpected-character.ari" line=1 column=1 byte_start=0 byte_end=1 message="unexpected character '$'" snippet="  --> tests/cases/compiler-development/artifact/errors/diagnostic-unexpected-character.ari:1:1\n   |\n 1 | $\n   | ^"
